goals of paths with 5 tiles or less remaining are now also considered reserved